[gd_scene load_steps=3 format=3 uid="uid://by8emlu68l1l2"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_3x3kq"]
[ext_resource type="Texture2D" uid="uid://deachlja4hq73" path="res://assets/hoopdog.png" id="2_ql02a"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_3x3kq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.14902, 0.14902, 0.14902, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(988, 482)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_ql02a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="DebugButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Debug"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/DebugButton" to="." method="_on_debug_button_pressed"]
